# mosaic

./: 404.html  CNAME  README.md  REUSE.toml  SECURITY.md  dictionary.txt  index.html  sitemap.xml  versions.json
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: doc-publish.yml  integration-tests.yml  nccl-profiler-plugin-container.yml
1.0.0/: 404.html  index.html  sitemap.xml
1.0.0/architecture/: index.html
1.0.0/coc/: index.html
1.0.0/contribution/: index.html
1.0.0/design/: index.html
1.0.0/governance/: index.html
1.0.0/quickstart/: index.html
1.0.0/release/: index.html
1.0.0/testsuite/: index.html
1.0.0/troubleshoot/: index.html
1.0.0/validation/: index.html
1.0.1/: 404.html  CNAME  index.html  sitemap.xml
1.0.1/architecture/: index.html
1.0.1/coc/: index.html
1.0.1/contribution/: index.html
1.0.1/design/: index.html
1.0.1/governance/: index.html
1.0.1/quickstart/: index.html
1.0.1/release/: index.html
1.0.1/testsuite/: index.html
1.0.1/troubleshoot/: index.html
1.0.1/validation/: index.html
architecture/: index.html
coc/: index.html
contribution/: index.html
deployments/: docker-compose-vllm.yml  docker-compose.yml
deployments/amd-gpu-monitoring/: docker-compose.yml
deployments/dashboards/: disaggregated.json  mosaic.json  system_details_nvidia.json
deployments/file_sd_configs/: file-sd-config-generate.sh
deployments/nvidia-gpu-monitoring/: docker-compose.yml  process-exporter.config.yml
design/: index.html
docs/: mkdocs.yml
docs/docs/: contribution.md  dictionary.txt  index.md  quickstart.md  testsuite.md  validation.md
docs/docs/stylesheets/: extra.css
governance/: index.html
latest/: 404.html  index.html  sitemap.xml
latest/architecture/: index.html
latest/coc/: index.html
latest/contribution/: index.html
latest/design/: index.html
latest/governance/: index.html
latest/quickstart/: index.html
latest/release/: index.html
latest/search/: search_index.json
latest/testsuite/: index.html
latest/troubleshoot/: index.html
latest/validation/: index.html
profiler/: CMakeLists.txt  Dockerfile  aggregation.cc  aggregation.h  events.h  profiler_otel.cc  telemetry.cc  telemetry_internal.h  telemetry_primer.cc  telemetry_primer.h
profiler/tests/: CMakeLists.txt
profiler/tests/unit/: test_aggregation.cc  test_profiler_events.cc
quickstart/: index.html
release/: index.html
search/: search_index.json
stylesheets/: extra.css
tests/: Makefile  README.md  docker-compose.yml
tests/suites/: pyproject.toml
tests/suites/dashboards/: conftest.py  test_dashboards.py
tests/suites/profiler_otel/: README.md  conftest.py  test_profiler_metrics.py
testsuite/: index.html
troubleshoot/: index.html
validation/: index.html
